@@ -1,3 +1,9 @@
+2007-10-22  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* swank-arglist.lisp (read-softly): Renamed to
+	READ-SOFTLY-FROM-STRING and moved to `swank.lisp'.
+	(unintern-in-home-package): Moved to `swank.lisp'.
+
 2007-10-01  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-autdoc.el (slime-autodoc-message-ok-p): Don't display an
